src/objects/Insurance_Fields_Ids__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Annual_Premium_c__c</fullName>
        <label>Annual_Premium__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Death_Benefit_c__c</fullName>
        <label>Basic_Death_Benefit__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_c__c</fullName>
        <label>Carrier__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Individual_c__c</fullName>
        <label>Co_Insured_Individual__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_c__c</fullName>
        <label>Entity__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Individual_c__c</fullName>
        <label>Insured_Individual__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Tobacco_Class_c__c</fullName>
        <label>Insured_Tobacco_Class__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type_c__c</fullName>
        <label>Policy_Type__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Revenue_c__c</fullName>
        <label>Potential_Revenue__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Frequency_c__c</fullName>
        <label>Premium_Frequency__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name_c__c</fullName>
        <label>Product_Name__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number_c__c</fullName>
        <label>Product_Number__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_c__c</fullName>
        <label>Status__c</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Insurance_Fields_Ids</label>
</CustomObject>